cmake: also print the build type when configuring

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -306,3 +306,5 @@ message(STATUS "  DOC_DIR: ${DOC_DIR}")
 message(STATUS "  ICON_DIR: ${ICON_DIR}")
 message(STATUS "  MENU_DIR: ${MENU_DIR}")
 message(STATUS "")
+message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
+message(STATUS "")
