cmake: Add option to skip verifying that plugins can load.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -150,9 +150,9 @@ IF(CMAKE_COMPILER_IS_GNUCXX)
 		set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} -Wl,--enable-auto-import")
 	endif (WIN32)
 	# Ensure all plugin symbols exist.
-	if (NOT APPLE)
+	if (NOT APPLE AND NOT UNSAFE_PLUGIN)
 		set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} -Wl,--no-undefined")
-	endif (NOT APPLE)
+	endif (NOT APPLE AND NOT UNSAFE_PLUGIN)
 ENDIF(CMAKE_COMPILER_IS_GNUCXX)
 
 MESSAGE(STATUS "Looking for Python libraries")
@@ -252,7 +252,9 @@ MACRO(ADD_GEMRB_PLUGIN plugin_name)
 	SET_TARGET_PROPERTIES(${plugin_name} PROPERTIES PREFIX ""
 		INSTALL_RPATH ${LIB_DIR}
 		LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/gemrb/plugins)
-	TARGET_LINK_LIBRARIES(${plugin_name} gemrb_core)
+	if (NOT UNSAFE_PLUGIN)
+		TARGET_LINK_LIBRARIES(${plugin_name} gemrb_core)
+	endif (NOT UNSAFE_PLUGIN)
 	INSTALL(TARGETS ${plugin_name} DESTINATION ${PLUGIN_DIR})
 ENDMACRO(ADD_GEMRB_PLUGIN)
 
