--- a/gemrb/core/CMakeLists.txt
+++ b/gemrb/core/CMakeLists.txt
@@ -1,8 +1,6 @@
 ADD_DEFINITIONS(-DGEM_BUILD_DLL)
 
-FILE(GLOB gemrb_core_LIB_SRCS "*.cpp")
-
-ADD_LIBRARY(gemrb_core SHARED ${gemrb_core_LIB_SRCS}
+FILE(GLOB gemrb_core_LIB_SRCS "*.cpp"
 	GameScript/Actions.cpp
 	GameScript/GSUtils.cpp
 	GameScript/GameScript.cpp
@@ -33,8 +31,18 @@ ADD_LIBRARY(gemrb_core SHARED ${gemrb_core_LIB_SRCS}
 	System/snprintf.cpp
 	)
 
-IF(WIN32)
-  INSTALL(TARGETS gemrb_core RUNTIME DESTINATION ${LIB_DIR})
-ELSE(WIN32)
-  INSTALL(TARGETS gemrb_core LIBRARY DESTINATION ${LIB_DIR})
-ENDIF(WIN32)
+if (STATIC_LINK)
+	ADD_LIBRARY(gemrb_core STATIC ${gemrb_core_LIB_SRCS})
+else (STATIC_LINK)
+	ADD_LIBRARY(gemrb_core SHARED ${gemrb_core_LIB_SRCS})
+	IF(WIN32)
+	  INSTALL(TARGETS gemrb_core RUNTIME DESTINATION ${LIB_DIR})
+	ELSE(WIN32)
+	  INSTALL(TARGETS gemrb_core LIBRARY DESTINATION ${LIB_DIR})
+	ENDIF(WIN32)
+endif (STATIC_LINK)
+
+SET_TARGET_PROPERTIES(gemrb_core PROPERTIES
+	COMPILE_DEFINITIONS
+	"PLUGINDIR=\"${PLUGIN_DIR}\";DATADIR=\"${DATA_DIR}\";SYSCONFDIR=\"${SYSCONF_DIR}\""
+	)
