--- a/gemrb/plugins/CMakeLists.txt
+++ b/gemrb/plugins/CMakeLists.txt
@@ -38,3 +38,7 @@ ADD_SUBDIRECTORY( WAVReader )
 ADD_SUBDIRECTORY( WEDImporter )
 ADD_SUBDIRECTORY( WMPImporter )
 ADD_SUBDIRECTORY( ZLibManager )
+
+if (STATIC_LINK)
+	SET(plugins ${plugins} PARENT_SCOPE)
+endif (STATIC_LINK)
