cmake: Properly disable support for static linking.
Disable support on currently unsupported platforms.

Signed-off-by: Tom Prince <tom.prince@ualberta.net>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -210,7 +210,8 @@ if (STATIC_LINK)
 	if (NOT WIN32 AND NOT APPLE)
 		ADD_DEFINITIONS("-DSTATIC_LINK")
 	else (NOT WIN32 AND NOT APPLE)
-		unset(STATIC_LINK)
+		unset(STATIC_LINK CACHE)
+		MESSAGE(STATUS "Static linking not (yet) supported on this platform.")
 	endif (NOT WIN32 AND NOT APPLE)
 endif (STATIC_LINK)
 
