config: Fix the worst offenders in the broken sample config.
Signed-off-by: Tom Prince <tom.prince@ualberta.net>

--- a/gemrb/CMakeLists.txt
+++ b/gemrb/CMakeLists.txt
@@ -22,4 +22,4 @@ ELSE(WIN32)
 ENDIF(WIN32)
 
 INSTALL( TARGETS gemrb DESTINATION ${BIN_DIR} )
-INSTALL( FILES GemRB.cfg.sample GemRB.cfg.subdir.sample DESTINATION ${SYSCONF_DIR} )
+INSTALL( FILES GemRB.cfg.sample DESTINATION ${SYSCONF_DIR} )
