implemented ExportParty action, Verbal Constant remapping

--- a/gemrb/override/iwd/gemrb.ini
+++ b/gemrb/override/iwd/gemrb.ini
@@ -78,6 +78,7 @@ SpawnIni = 1
 HasHideInShadows = 1
 AreaVisitedVar = 1
 HasSpecificDamageBonus = 0
+BiographyIsRes = 1
 
 [charset]
 CharCount = 31
