--- a/gemrb/override/how/gemrb.ini
+++ b/gemrb/override/how/gemrb.ini
@@ -80,6 +80,7 @@ SelectiveMagicRes = 1
 HasHideInShadows = 1
 AreaVisitedVar = 1
 HasSpecificDamageBonus = 1
+BiographyIsRes = 1
 
 [charset]
 CharCount = 31
