externalized the 'NOTE:' string that is used in highlights in PST TextArea

--- a/gemrb/override/pst/gemrb.ini
+++ b/gemrb/override/pst/gemrb.ini
@@ -37,6 +37,7 @@ TooltipFont = TRMTFONT
 GroundCircleBAM1 = WMPICKL/3
 GroundCircleBAM2 = WMPICKR
 GroundCircleBAM3 = WMPICKL
+NoteString = NOTE:
 
 ; INI file from the original games
 INIConfig = torment.ini
