cmake: added a macro to prettify the main CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,50 +41,29 @@ endif (NOT LAYOUT)
 
 SET(LAYOUT "${LAYOUT}" CACHE STRING "Directory layout.")
 
+# macro that sets a default (path) if one wasn't specified
+MACRO(SET_PATH variable default)
+	IF(NOT ${variable})
+		SET(${variable} ${default})
+	ENDIF(NOT ${variable})
+ENDMACRO(SET_PATH)
+
 if (${LAYOUT} MATCHES "home")
-	IF( NOT PLUGIN_DIR )
-		SET( PLUGIN_DIR ${CMAKE_INSTALL_PREFIX}/plugins )
-	ENDIF( NOT PLUGIN_DIR )
-	IF( NOT DATA_DIR )
-		SET( DATA_DIR ${CMAKE_INSTALL_PREFIX} )
-	ENDIF( NOT DATA_DIR )
-	IF( NOT MAN_DIR )
-		SET( MAN_DIR ${CMAKE_INSTALL_PREFIX}/man/man6 )
-	ENDIF( NOT MAN_DIR )
-	IF( NOT BIN_DIR )
-		SET( BIN_DIR ${CMAKE_INSTALL_PREFIX} )
-	ENDIF( NOT BIN_DIR )
-	IF( NOT SYSCONF_DIR )
-		SET( SYSCONF_DIR ${CMAKE_INSTALL_PREFIX} )
-	ENDIF( NOT SYSCONF_DIR )
-	IF( NOT LIB_DIR )
-		SET( LIB_DIR ${CMAKE_INSTALL_PREFIX} )
-	ENDIF( NOT LIB_DIR )
-	IF( NOT DOC_DIR )
-		SET( DOC_DIR ${CMAKE_INSTALL_PREFIX}/doc )
-	ENDIF( NOT DOC_DIR )
-	IF( NOT ICON_DIR )
-		SET( ICON_DIR ${CMAKE_INSTALL_PREFIX} )
-	ENDIF( NOT ICON_DIR )
-	IF( NOT MENU_DIR )
-		SET( MENU_DIR ${CMAKE_INSTALL_PREFIX} )
-	ENDIF( NOT MENU_DIR )
+	SET_PATH( PLUGIN_DIR ${CMAKE_INSTALL_PREFIX}/plugins )
+	SET_PATH( DATA_DIR ${CMAKE_INSTALL_PREFIX} )
+	SET_PATH( MAN_DIR ${CMAKE_INSTALL_PREFIX}/man/man6 )
+	SET_PATH( BIN_DIR ${CMAKE_INSTALL_PREFIX} )
+	SET_PATH( SYSCONF_DIR ${CMAKE_INSTALL_PREFIX} )
+	SET_PATH( LIB_DIR ${CMAKE_INSTALL_PREFIX} )
+	SET_PATH( DOC_DIR ${CMAKE_INSTALL_PREFIX}/doc )
+	SET_PATH( ICON_DIR ${CMAKE_INSTALL_PREFIX} )
+	SET_PATH( MENU_DIR ${CMAKE_INSTALL_PREFIX} )
 elseif (${LAYOUT} MATCHES "fhs")
-	IF( NOT LIB_DIR )
-		SET( LIB_DIR ${CMAKE_INSTALL_PREFIX}/lib/gemrb )
-	ENDIF( NOT LIB_DIR )
-	IF( NOT PLUGIN_DIR )
-		SET( PLUGIN_DIR ${LIB_DIR}/plugins )
-	ENDIF( NOT PLUGIN_DIR )
-	IF( NOT DATA_DIR )
-		SET( DATA_DIR ${CMAKE_INSTALL_PREFIX}/share/gemrb )
-	ENDIF( NOT DATA_DIR )
-	IF( NOT MAN_DIR )
-		SET( MAN_DIR ${CMAKE_INSTALL_PREFIX}/share/man/man6 )
-	ENDIF( NOT MAN_DIR )
-	IF( NOT BIN_DIR )
-		SET( BIN_DIR ${CMAKE_INSTALL_PREFIX}/bin )
-	ENDIF( NOT BIN_DIR )
+	SET_PATH( LIB_DIR ${CMAKE_INSTALL_PREFIX}/lib/gemrb )
+	SET_PATH( PLUGIN_DIR ${LIB_DIR}/plugins )
+	SET_PATH( DATA_DIR ${CMAKE_INSTALL_PREFIX}/share/gemrb )
+	SET_PATH( MAN_DIR ${CMAKE_INSTALL_PREFIX}/share/man/man6 )
+	SET_PATH( BIN_DIR ${CMAKE_INSTALL_PREFIX}/bin )
 	IF( NOT SYSCONF_DIR )
 		if ( ${CMAKE_INSTALL_PREFIX} STREQUAL "/usr" )
 			SET( SYSCONF_DIR /etc/gemrb )
@@ -92,43 +71,19 @@ elseif (${LAYOUT} MATCHES "fhs")
 			SET( SYSCONF_DIR ${CMAKE_INSTALL_PREFIX}/etc/gemrb )
 		endif ()
 	ENDIF( NOT SYSCONF_DIR )
-	IF( NOT DOC_DIR )
-		SET( DOC_DIR ${CMAKE_INSTALL_PREFIX}/share/doc/gemrb )
-	ENDIF( NOT DOC_DIR )
-	IF( NOT ICON_DIR )
-		SET( ICON_DIR ${CMAKE_INSTALL_PREFIX}/share/pixmaps )
-	ENDIF( NOT ICON_DIR )
-	IF( NOT MENU_DIR )
-		SET( MENU_DIR ${CMAKE_INSTALL_PREFIX}/share/applications )
-	ENDIF( NOT MENU_DIR )
+	SET_PATH( DOC_DIR ${CMAKE_INSTALL_PREFIX}/share/doc/gemrb )
+	SET_PATH( ICON_DIR ${CMAKE_INSTALL_PREFIX}/share/pixmaps )
+	SET_PATH( MENU_DIR ${CMAKE_INSTALL_PREFIX}/share/applications )
 else (${LAYOUT} MATCHES "opt")
-	IF( NOT LIB_DIR )
-		SET( LIB_DIR ${CMAKE_INSTALL_PREFIX}/lib )
-	ENDIF( NOT LIB_DIR )
-	IF( NOT PLUGIN_DIR )
-		SET( PLUGIN_DIR ${LIB_DIR}/plugins )
-	ENDIF( NOT PLUGIN_DIR )
-	IF( NOT DATA_DIR )
-		SET( DATA_DIR ${CMAKE_INSTALL_PREFIX}/share/ )
-	ENDIF( NOT DATA_DIR )
-	IF( NOT MAN_DIR )
-		SET( MAN_DIR ${CMAKE_INSTALL_PREFIX}/man/man6 )
-	ENDIF( NOT MAN_DIR )
-	IF( NOT BIN_DIR )
-		SET( BIN_DIR ${CMAKE_INSTALL_PREFIX}/bin )
-	ENDIF( NOT BIN_DIR )
-	IF( NOT SYSCONF_DIR )
-		SET( SYSCONF_DIR ${CMAKE_INSTALL_PREFIX}/etc )
-	ENDIF( NOT SYSCONF_DIR )
-	IF( NOT DOC_DIR )
-		SET( DOC_DIR ${CMAKE_INSTALL_PREFIX}/share/doc/gemrb )
-	ENDIF( NOT DOC_DIR )
-	IF( NOT ICON_DIR )
-		SET( ICON_DIR ${CMAKE_INSTALL_PREFIX}/share/pixmaps )
-	ENDIF( NOT ICON_DIR )
-	IF( NOT MENU_DIR )
-		SET( MENU_DIR ${CMAKE_INSTALL_PREFIX}/share/applications )
-	ENDIF( NOT MENU_DIR )
+	SET_PATH( LIB_DIR ${CMAKE_INSTALL_PREFIX}/lib )
+	SET_PATH( PLUGIN_DIR ${LIB_DIR}/plugins )
+	SET_PATH( DATA_DIR ${CMAKE_INSTALL_PREFIX}/share/ )
+	SET_PATH( MAN_DIR ${CMAKE_INSTALL_PREFIX}/man/man6 )
+	SET_PATH( BIN_DIR ${CMAKE_INSTALL_PREFIX}/bin )
+	SET_PATH( SYSCONF_DIR ${CMAKE_INSTALL_PREFIX}/etc )
+	SET_PATH( DOC_DIR ${CMAKE_INSTALL_PREFIX}/share/doc/gemrb )
+	SET_PATH( ICON_DIR ${CMAKE_INSTALL_PREFIX}/share/pixmaps )
+	SET_PATH( MENU_DIR ${CMAKE_INSTALL_PREFIX}/share/applications )
 endif (${LAYOUT} MATCHES "home")
 
 
