move object matching/filtering code from GSUtils.cpp to new Matching.cpp

--- a/gemrb/core/CMakeLists.txt
+++ b/gemrb/core/CMakeLists.txt
@@ -4,6 +4,7 @@ FILE(GLOB gemrb_core_LIB_SRCS "*.cpp"
 	GameScript/Actions.cpp
 	GameScript/GSUtils.cpp
 	GameScript/GameScript.cpp
+	GameScript/Matching.cpp
 	GameScript/Objects.cpp
 	GameScript/Triggers.cpp
 	GUI/Button.cpp
