cmake: install the minimal dataset

--- a/gemrb/GUIScripts/CMakeLists.txt
+++ b/gemrb/GUIScripts/CMakeLists.txt
@@ -7,3 +7,5 @@ ADD_SUBDIRECTORY( bg2 )
 ADD_SUBDIRECTORY( iwd )
 ADD_SUBDIRECTORY( iwd2 )
 ADD_SUBDIRECTORY( pst )
+
+INSTALL( DIRECTORY test DESTINATION ${DATA_DIR}/GUIScripts )
