--- a/gemrb/GemRB.cfg.sample.in
+++ b/gemrb/GemRB.cfg.sample.in
@@ -194,7 +194,7 @@ CachePath=./Cache/
 #  enter the full path to the GemRB executable      #
 #####################################################
 
-#GemRBPath=./
+GemRBPath=@DATA_DIR@
 
 #####################################################
 #  GemRB GUI Scripts Path [String]                  #
@@ -205,7 +205,7 @@ CachePath=./Cache/
 #  the 'GUIScript' subdirectory.                    #
 #####################################################
 
-#GUIScriptsPath=./
+GUIScriptsPath=@DATA_DIR@
 
 #####################################################
 #  GemRB Plugins Path [String]                      #
@@ -219,7 +219,7 @@ CachePath=./Cache/
 #  GemRB from source directory on Linux.            #
 #####################################################
 
-#PluginsPath=./plugins/
+PluginsPath=@PLUGIN_DIR@
 
 #####################################################
 #  Game Data Path [String]                          #
@@ -252,7 +252,7 @@ CachePath=./Cache/
 #  You probably do NOT want to specify this!        #
 #####################################################
 
-#GemRBOverridePath=/usr/share/games/gemrb
+GemRBOverridePath=@DATA_DIR@
 
 #####################################################
 #  END                                              #
