cmake: made the dependency checks more concise and consistent on success added missing output for above made zlib required

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,57 +110,72 @@ IF(CMAKE_COMPILER_IS_GNUCXX)
 	endif (NOT APPLE AND NOT UNSAFE_PLUGIN)
 ENDIF(CMAKE_COMPILER_IS_GNUCXX)
 
-MESSAGE(STATUS "Looking for Python libraries")
 INCLUDE(FindPythonLibs)
 IF(PYTHON_LIBRARY)
- MESSAGE(STATUS "Python Libraries Found")
-ELSE(PYTHON_LIBRARY)
- MESSAGE(FATAL_ERROR "Unable to find Python development libraries. Please get it from www.python.org")
-ENDIF(PYTHON_LIBRARY)
+	MESSAGE(STATUS "Looking for Python libraries: found")
+ELSE()
+	MESSAGE(SEND_ERROR "Looking for Python libraries: not found!")
+	MESSAGE(FATAL_ERROR "Please get the development libraries from www.python.org")
+ENDIF()
 
-MESSAGE(STATUS "Looking for openAL libraries")
 INCLUDE(FindOpenAL)
 IF(OPENAL_FOUND)
- MESSAGE(STATUS "openal found")
-ELSE(OPENAL_FOUND)
- MESSAGE(ERROR "unable to find openal. Please set OPENALDIR environment variable or get it from www.openal.org")
-ENDIF(OPENAL_FOUND)
+	MESSAGE(STATUS "Looking for OpenAL: found")
+ELSE()
+	MESSAGE(WARNING "Looking for OpenAL: not found!")
+	MESSAGE(WARNING "If you want to build the OpenAL plugin, get OpenAL from www.openal.org.")
+	MESSAGE(WARNING "If it just wasn't found, try setting the OPENALDIR environment variable.")
+ENDIF()
 
-MESSAGE(STATUS "Looking for SDL")
 INCLUDE(FindSDL)
 IF(SDL_FOUND)
- MESSAGE(STATUS "SDL found")
-ELSE(SDL_FOUND)
- MESSAGE(FATAL_ERROR "unable to find SDL. Please get it from www.libsdl.org")
-ENDIF(SDL_FOUND)
+	MESSAGE(STATUS "Looking for SDL: found")
+ELSE()
+	MESSAGE(SEND_ERROR "Looking for SDL: not found!")
+	MESSAGE(FATAL_ERROR "Please get it from www.libsdl.org")
+ENDIF()
 
-MESSAGE(STATUS "Looking for SDL_mixer")
 INCLUDE(FindSDL_mixer)
+IF(SDLMIXER_FOUND)
+	MESSAGE(STATUS "Looking for SDL_mixer: found")
+ELSE()
+	MESSAGE(WARNING "Looking for SDL_mixer: not found!")
+	MESSAGE(WARNING "If you want to build the SDL_mixer plugin, install SDL_mixer first.")
+ENDIF()
 
-MESSAGE( STATUS "Looking for Zlib" )
-#SET(ZLIB_FIND_REQUIRED TRUE)
 INCLUDE(FindZLIB)
+IF(ZLIB_FOUND)
+	MESSAGE(STATUS "Looking for Zlib: found")
+ELSE()
+	MESSAGE(SEND_ERROR "Looking for Zlib: not found!")
+	MESSAGE(FATAL_ERROR "Please install the Zlib library and headers first!")
+ENDIF()
 
-MESSAGE( STATUS "Looking for libPNG" )
 INCLUDE(FindPNG)
 IF(PNG_FOUND)
- MESSAGE( STATUS "libPNG found" )
-ELSE(PNG_FOUND)
- MESSAGE( STATUS "WARNING : GemRB will be built without any PNG support. Get it from www.libpng.org" )
-ENDIF(PNG_FOUND)
+	MESSAGE(STATUS "Looking for libPNG: found")
+ELSE()
+	MESSAGE(WARNING "Looking for libPNG: not found!")
+	MESSAGE(WARNING "GemRB will be built without any PNG support. Get it from www.libpng.org" )
+	MESSAGE(WARNING "While no original game data is in PNG format, some mod data is and will need conversion.")
+ENDIF()
 
 IF(UNIX)
- MESSAGE(STATUS "Looking for dl library")
  FIND_LIBRARY(DLD_LIBRARY_PATH dl dld)
  IF(DLD_LIBRARY_PATH)
-  MESSAGE(STATUS "dl library found")
+   MESSAGE(STATUS "Looking for dl library: found")
  ELSE(DLD_LIBRARY_PATH)
-  MESSAGE(FATAL_ERROR "dl library not found")
+   MESSAGE(FATAL_ERROR "Looking for dl library: not found!")
  ENDIF(DLD_LIBRARY_PATH)
 ENDIF(UNIX)
 
-MESSAGE(STATUS "Looking for Ogg Vorbis support")
 FIND_LIBRARY(VORBIS_LIBRARY vorbisfile)
+IF(VORBIS_LIBRARY)
+	MESSAGE(STATUS "Looking for Ogg Vorbis support: found")
+ELSE()
+	MESSAGE(WARNING "Looking for Ogg Vorbis support: not found!")
+	MESSAGE(WARNING "While no original game data is in OGG format, some mod data is and will need conversion.")
+ENDIF()
 
 ADD_DEFINITIONS("-DHAVE_CONFIG_H")
 
