--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,21 +110,13 @@ IF(CMAKE_COMPILER_IS_GNUCXX)
 	endif (NOT APPLE AND NOT UNSAFE_PLUGIN)
 ENDIF(CMAKE_COMPILER_IS_GNUCXX)
 
+# Check for all the required and optional dependencies
 INCLUDE(FindPythonLibs)
 IF(PYTHON_LIBRARY)
 	MESSAGE(STATUS "Looking for Python libraries: found")
 ELSE()
 	MESSAGE(SEND_ERROR "Looking for Python libraries: not found!")
 	MESSAGE(FATAL_ERROR "Please get the development libraries from www.python.org")
-ENDIF()
-
-INCLUDE(FindOpenAL)
-IF(OPENAL_FOUND)
-	MESSAGE(STATUS "Looking for OpenAL: found")
-ELSE()
-	MESSAGE(WARNING "Looking for OpenAL: not found!")
-	MESSAGE(WARNING "If you want to build the OpenAL plugin, get OpenAL from www.openal.org.")
-	MESSAGE(WARNING "If it just wasn't found, try setting the OPENALDIR environment variable.")
 ENDIF()
 
 INCLUDE(FindSDL)
@@ -135,20 +127,38 @@ ELSE()
 	MESSAGE(FATAL_ERROR "Please get it from www.libsdl.org")
 ENDIF()
 
-INCLUDE(FindSDL_mixer)
-IF(SDLMIXER_FOUND)
-	MESSAGE(STATUS "Looking for SDL_mixer: found")
-ELSE()
-	MESSAGE(WARNING "Looking for SDL_mixer: not found!")
-	MESSAGE(WARNING "If you want to build the SDL_mixer plugin, install SDL_mixer first.")
-ENDIF()
-
 INCLUDE(FindZLIB)
 IF(ZLIB_FOUND)
 	MESSAGE(STATUS "Looking for Zlib: found")
 ELSE()
 	MESSAGE(SEND_ERROR "Looking for Zlib: not found!")
 	MESSAGE(FATAL_ERROR "Please install the Zlib library and headers first!")
+ENDIF()
+
+IF(UNIX)
+	FIND_LIBRARY(DLD_LIBRARY_PATH dl dld)
+	IF(DLD_LIBRARY_PATH)
+		MESSAGE(STATUS "Looking for dl library: found")
+	ELSE(DLD_LIBRARY_PATH)
+		MESSAGE(FATAL_ERROR "Looking for dl library: not found!")
+	ENDIF(DLD_LIBRARY_PATH)
+ENDIF(UNIX)
+
+INCLUDE(FindOpenAL)
+IF(OPENAL_FOUND)
+	MESSAGE(STATUS "Looking for OpenAL: found")
+ELSE()
+	MESSAGE(WARNING "Looking for OpenAL: not found!")
+	MESSAGE(WARNING "If you want to build the OpenAL plugin, get OpenAL from www.openal.org.")
+	MESSAGE(WARNING "If it just wasn't found, try setting the OPENALDIR environment variable.")
+ENDIF()
+
+INCLUDE(FindSDL_mixer)
+IF(SDLMIXER_FOUND)
+	MESSAGE(STATUS "Looking for SDL_mixer: found")
+ELSE()
+	MESSAGE(WARNING "Looking for SDL_mixer: not found!")
+	MESSAGE(WARNING "If you want to build the SDL_mixer plugin, install SDL_mixer first.")
 ENDIF()
 
 INCLUDE(FindPNG)
@@ -159,15 +169,6 @@ ELSE()
 	MESSAGE(WARNING "GemRB will be built without any PNG support. Get it from www.libpng.org" )
 	MESSAGE(WARNING "While no original game data is in PNG format, some mod data is and will need conversion.")
 ENDIF()
-
-IF(UNIX)
- FIND_LIBRARY(DLD_LIBRARY_PATH dl dld)
- IF(DLD_LIBRARY_PATH)
-   MESSAGE(STATUS "Looking for dl library: found")
- ELSE(DLD_LIBRARY_PATH)
-   MESSAGE(FATAL_ERROR "Looking for dl library: not found!")
- ENDIF(DLD_LIBRARY_PATH)
-ENDIF(UNIX)
 
 FIND_LIBRARY(VORBIS_LIBRARY vorbisfile)
 IF(VORBIS_LIBRARY)
