cmake: link everything against the thread lib on unices

--- a/gemrb/CMakeLists.txt
+++ b/gemrb/CMakeLists.txt
@@ -11,13 +11,13 @@ IF(WIN32)
  TARGET_LINK_LIBRARIES(gemrb gemrb_core)
 ELSE(WIN32)
  IF(APPLE)
-  TARGET_LINK_LIBRARIES(gemrb gemrb_core ${SDL_LIBRARY} ${SDL_MAIN_LIBRARY_PATH} ${COCOA_LIBRARY_PATH} ${DLD_LIBRARY_PATH})
+  TARGET_LINK_LIBRARIES(gemrb gemrb_core ${SDL_LIBRARY} ${SDL_MAIN_LIBRARY_PATH} ${COCOA_LIBRARY_PATH} ${DLD_LIBRARY_PATH} ${CMAKE_THREAD_LIBS_INIT})
  ELSE(APPLE)
   if (STATIC_LINK)
-	TARGET_LINK_LIBRARIES(gemrb ${DLD_LIBRARY_PATH}
+	TARGET_LINK_LIBRARIES(gemrb ${DLD_LIBRARY_PATH} ${CMAKE_THREAD_LIBS_INIT}
 		-Wl,--whole-archive gemrb_core ${plugins} -Wl,--no-whole-archive)
   else (STATIC_LINK)
-	TARGET_LINK_LIBRARIES(gemrb gemrb_core ${DLD_LIBRARY_PATH})
+	TARGET_LINK_LIBRARIES(gemrb gemrb_core ${DLD_LIBRARY_PATH} ${CMAKE_THREAD_LIBS_INIT})
   endif (STATIC_LINK)
  ENDIF(APPLE)
 ENDIF(WIN32)
