--- a/gemrb/plugins/OGGReader/CMakeLists.txt
+++ b/gemrb/plugins/OGGReader/CMakeLists.txt
@@ -3,5 +3,5 @@ IF (VORBIS_LIBRARY)
 
  ADD_GEMRB_PLUGIN (OGGReader ${OGGReader_files})
 
- TARGET_LINK_LIBRARIES(OGGReader ${VORBIS_LIBRARY})
+ TARGET_LINK_LIBRARIES(OGGReader ${VORBIS_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
 ENDIF (VORBIS_LIBRARY)
