--- a/gemrb/plugins/OpenALAudio/CMakeLists.txt
+++ b/gemrb/plugins/OpenALAudio/CMakeLists.txt
@@ -3,5 +3,5 @@ IF(OPENAL_FOUND)
 INCLUDE_DIRECTORIES(${OPENAL_INCLUDE_DIR} ${SDL_INCLUDE_DIR} )
 FILE( GLOB OpenALAudio_files *.cpp )
 ADD_GEMRB_PLUGIN (OpenALAudio ${OpenALAudio_files} )
-TARGET_LINK_LIBRARIES(OpenALAudio ${OPENAL_LIBRARY} ${SDL_LIBRARY} )
+TARGET_LINK_LIBRARIES(OpenALAudio ${OPENAL_LIBRARY} ${SDL_LIBRARY} ${CMAKE_THREAD_LIBS_INIT})
 ENDIF(OPENAL_FOUND)
