--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -144,6 +144,9 @@ IF(UNIX)
 	ELSE(DLD_LIBRARY_PATH)
 		MESSAGE(FATAL_ERROR "Looking for dl library: not found!")
 	ENDIF(DLD_LIBRARY_PATH)
+
+	SET(CMAKE_THREAD_PREFER_PTHREAD true)
+	FIND_PACKAGE(Threads REQUIRED)
 ENDIF(UNIX)
 
 INCLUDE(FindOpenAL)
@@ -245,7 +248,7 @@ MACRO(ADD_GEMRB_PLUGIN plugin_name)
 	else (STATIC_LINK)
 		ADD_LIBRARY(${plugin_name} MODULE ${ARGN})
 		if (NOT UNSAFE_PLUGIN)
-			TARGET_LINK_LIBRARIES(${plugin_name} gemrb_core)
+			TARGET_LINK_LIBRARIES(${plugin_name} gemrb_core ${CMAKE_THREAD_LIBS_INIT})
 		endif (NOT UNSAFE_PLUGIN)
 		INSTALL(TARGETS ${plugin_name} DESTINATION ${PLUGIN_DIR})
 	endif (STATIC_LINK)
