--- a/gemrb/plugins/ZLibManager/CMakeLists.txt
+++ b/gemrb/plugins/ZLibManager/CMakeLists.txt
@@ -1,3 +1,3 @@
 INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIR})
 ADD_GEMRB_PLUGIN (ZLibManager ZLibManager.cpp)
-TARGET_LINK_LIBRARIES( ZLibManager ${ZLIB_LIBRARY} )
+TARGET_LINK_LIBRARIES( ZLibManager ${ZLIB_LIBRARY} ${CMAKE_THREAD_LIBS_INIT} )
