search the sdl include dir when compiling gemrb, fixing a bad apple problem

--- a/gemrb/CMakeLists.txt
+++ b/gemrb/CMakeLists.txt
@@ -7,6 +7,7 @@ ADD_SUBDIRECTORY( tests )
 
 ADD_EXECUTABLE(gemrb GemRB.cpp )
 SET_TARGET_PROPERTIES(gemrb PROPERTIES INSTALL_RPATH ${LIB_DIR})
+INCLUDE_DIRECTORIES( ${SDL_INCLUDE_DIR} )
 IF(WIN32)
  TARGET_LINK_LIBRARIES(gemrb gemrb_core)
 ELSE(WIN32)
