optional flexible area location in worldmap

--- a/gemrb/override/iwd/gemrb.ini
+++ b/gemrb/override/iwd/gemrb.ini
@@ -79,6 +79,7 @@ HasHideInShadows = 1
 AreaVisitedVar = 1
 HasSpecificDamageBonus = 0
 BiographyIsRes = 1
+FlexibleWorldmap = 1
 
 [charset]
 CharCount = 31
