--- a/gemrb/override/how/gemrb.ini
+++ b/gemrb/override/how/gemrb.ini
@@ -81,6 +81,7 @@ HasHideInShadows = 1
 AreaVisitedVar = 1
 HasSpecificDamageBonus = 1
 BiographyIsRes = 1
+FlexibleWorldmap = 1
 
 [charset]
 CharCount = 31
