cmake: install the medium svg too

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,7 @@ if (${LAYOUT} MATCHES "home")
 	SET_PATH( LIB_DIR ${CMAKE_INSTALL_PREFIX} )
 	SET_PATH( DOC_DIR ${CMAKE_INSTALL_PREFIX}/doc )
 	SET_PATH( ICON_DIR ${CMAKE_INSTALL_PREFIX} )
+	SET_PATH( SVG_DIR ${CMAKE_INSTALL_PREFIX} )
 	SET_PATH( MENU_DIR ${CMAKE_INSTALL_PREFIX} )
 elseif (${LAYOUT} MATCHES "fhs")
 	SET_PATH( LIB_DIR ${CMAKE_INSTALL_PREFIX}/lib/gemrb )
@@ -75,6 +76,7 @@ elseif (${LAYOUT} MATCHES "fhs")
 	ENDIF( NOT SYSCONF_DIR )
 	SET_PATH( DOC_DIR ${CMAKE_INSTALL_PREFIX}/share/doc/gemrb )
 	SET_PATH( ICON_DIR ${CMAKE_INSTALL_PREFIX}/share/pixmaps )
+	SET_PATH( SVG_DIR ${CMAKE_INSTALL_PREFIX}/share/icons/hicolor/scalable/apps )
 	SET_PATH( MENU_DIR ${CMAKE_INSTALL_PREFIX}/share/applications )
 else (${LAYOUT} MATCHES "opt")
 	SET_PATH( LIB_DIR ${CMAKE_INSTALL_PREFIX}/lib )
@@ -85,6 +87,7 @@ else (${LAYOUT} MATCHES "opt")
 	SET_PATH( SYSCONF_DIR ${CMAKE_INSTALL_PREFIX}/etc )
 	SET_PATH( DOC_DIR ${CMAKE_INSTALL_PREFIX}/share/doc/gemrb )
 	SET_PATH( ICON_DIR ${CMAKE_INSTALL_PREFIX}/share/pixmaps )
+	SET_PATH( SVG_DIR ${CMAKE_INSTALL_PREFIX}/share/icons/hicolor/scalable/apps )
 	SET_PATH( MENU_DIR ${CMAKE_INSTALL_PREFIX}/share/applications )
 endif (${LAYOUT} MATCHES "home")
 
@@ -262,6 +265,7 @@ ENDMACRO(ADD_GEMRB_OVERRIDE )
 ADD_SUBDIRECTORY( gemrb )
 INSTALL( FILES gemrb.6 DESTINATION ${MAN_DIR} )
 INSTALL( FILES artwork/gemrb-logo.png DESTINATION ${ICON_DIR} )
+INSTALL( FILES artwork/logo04-rb_only.svg DESTINATION ${SVG_DIR} RENAME gemrb.svg )
 INSTALL( FILES gemrb.desktop DESTINATION ${MENU_DIR} )
 INSTALL( FILES README INSTALL COPYING NEWS AUTHORS DESTINATION ${DOC_DIR} )
 
@@ -301,6 +305,7 @@ message(STATUS "  MAN_DIR: ${MAN_DIR}")
 message(STATUS "  SYSCONF_DIR: ${SYSCONF_DIR}")
 message(STATUS "  DOC_DIR: ${DOC_DIR}")
 message(STATUS "  ICON_DIR: ${ICON_DIR}")
+message(STATUS "  SVG_DIR: ${SVG_DIR}")
 message(STATUS "  MENU_DIR: ${MENU_DIR}")
 message(STATUS "")
 message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
