--- a/gemrb.desktop
+++ b/gemrb.desktop
@@ -4,7 +4,7 @@ Name=GemRB
 GenericName=Game engine made with preRendered Background
 Comment=a portable opensource implementation of Bioware's Infinity Engine
 Type=Application
-Icon=gemrb-logo
+Icon=gemrb
 Terminal=true
 Exec=gemrb
 Categories=Game;RolePlaying;Emulator;
